Conan update not working on obj folder actually work partially on the conan folder 	modified:   .gitignore 	modified:   cmake/conan/CONAN_README.txt 	modified:   cmake/conan/MSLogonACL/conanfile.py 	modified:   cmake/conan/SecureVNCPlugin/conanfile.py 	modified:   cmake/conan/authSSP/conanfile.py 	modified:   cmake/conan/authadmin/conanfile.py 	modified:   cmake/conan/conanfile.py 	modified:   cmake/conan/createpassword/conanfile.py 	modified:   cmake/conan/ldapauth/conanfile.py 	modified:   cmake/conan/ldapauth9x/conanfile.py 	modified:   cmake/conan/ldapauthnt4/conanfile.py 	modified:   cmake/conan/libomnithread/conanfile.py 	modified:   cmake/conan/librdr/conanfile.py 	modified:   cmake/conan/libudt4/conanfile.py 	modified:   cmake/conan/libudtcloud/conanfile.py 	modified:   cmake/conan/libzip32/conanfile.py 	modified:   cmake/conan/libzipunzip/conanfile.py 	modified:   cmake/conan/logging/conanfile.py 	modified:   cmake/conan/logmessages/conanfile.py 	modified:   cmake/conan/readmeConan.txt 	modified:   cmake/conan/repeater/conanfile.py 	modified:   cmake/conan/setcad/conanfile.py 	modified:   cmake/conan/setpasswd/conanfile.py 	modified:   cmake/conan/testauth/conanfile.py 	modified:   cmake/conan/uvnc_settings/conanfile.py 	modified:   cmake/conan/uvnckeyboardhelper/conanfile.py 	modified:   cmake/conan/vnchooks/conanfile.py 	modified:   cmake/conan/vncviewer/conanfile.py 	modified:   cmake/conan/winvnc/conanfile.py 	modified:   cmake/conan/workgrpdomnt4/conanfile.py

--- a/.gitignore
+++ b/.gitignore
@@ -152,6 +152,24 @@ winvnc/winvnc/vcpkg_installed/
 CMakeUserPresets.json
 
 
+# Conan Specific gitignore
+cmake/conan/CMakeCache.txt
+cmake/conan/CMakeFiles/
+#v- Until I have specific folders of my computer on these one
+cmake/conan/CMakePresets.json
+cmake/conan/cmakedeps_macros.cmake
+cmake/conan/conan_toolchain.cmake
+cmake/conan/conanbuild.bat
+cmake/conan/conanbuildenv-release-x86_64.bat
+cmake/conan/conandeps_legacy.cmake
+cmake/conan/conanrun.bat
+cmake/conan/conanrunenv-release-x86_64.bat
+cmake/conan/deactivate_conanbuild.bat
+cmake/conan/deactivate_conanrun.bat
+
+# End Conan Specific gitignore
+
+
 # Qt Specific gitignore
 
 # Customized ignore section ---------------------------
