Update paths to the sources and others for the Conan CMakeLists.txt 	modified:   cmake/conan/MSLogonACL/CMakeLists.txt 	modified:   cmake/conan/SecureVNCPlugin/CMakeLists.txt 	modified:   cmake/conan/authSSP/CMakeLists.txt 	modified:   cmake/conan/authadmin/CMakeLists.txt 	modified:   cmake/conan/createpassword/CMakeLists.txt 	modified:   cmake/conan/ldapauth/CMakeLists.txt 	modified:   cmake/conan/ldapauth9x/CMakeLists.txt 	modified:   cmake/conan/ldapauthnt4/CMakeLists.txt 	modified:   cmake/conan/libomnithread/CMakeLists.txt 	modified:   cmake/conan/librdr/CMakeLists.txt 	modified:   cmake/conan/libudt4/CMakeLists.txt 	modified:   cmake/conan/libudtcloud/CMakeLists.txt 	modified:   cmake/conan/libzip32/CMakeLists.txt 	modified:   cmake/conan/libzipunzip/CMakeLists.txt 	modified:   cmake/conan/logging/CMakeLists.txt 	modified:   cmake/conan/logmessages/CMakeLists.txt 	modified:   cmake/conan/repeater/CMakeLists.txt 	modified:   cmake/conan/setcad/CMakeLists.txt 	modified:   cmake/conan/setpasswd/CMakeLists.txt 	modified:   cmake/conan/testauth/CMakeLists.txt 	modified:   cmake/conan/uvnc_settings/CMakeLists.txt 	modified:   cmake/conan/uvnckeyboardhelper/CMakeLists.txt 	modified:   cmake/conan/vnchooks/CMakeLists.txt 	modified:   cmake/conan/vncviewer/CMakeLists.txt 	modified:   cmake/conan/winvnc/CMakeLists.txt 	modified:   cmake/conan/workgrpdomnt4/CMakeLists.txt 	modified:   cmake/libudt4/CMakeLists.txt

--- a/cmake/conan/authSSP/CMakeLists.txt
+++ b/cmake/conan/authSSP/CMakeLists.txt
@@ -11,9 +11,9 @@ set(${PROJECT_NAME}_SOURCES
 )
 add_library(${PROJECT_NAME} SHARED)
 foreach(file ${${PROJECT_NAME}_SOURCES})
-    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../addon/ms-logon/authSSP/${file}")
+    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../addon/ms-logon/authSSP/${file}")
 endforeach(file)
-target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../addon/ms-logon/authSSP/authSSP.rc")
+target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../addon/ms-logon/authSSP/authSSP.rc")
 set_source_files_properties(${CMAKE_SOURCE_DIR}/../addon/ms-logon/authSSP/authSSP.rc LANGUAGE RC)
 target_compile_definitions(${PROJECT_NAME} PRIVATE NDEBUG WIN32 _WINDOWS AUTHSSP_EXPORTS UNICODE=1 _UNICODE=1)
 if (MINGW)
