--- a/cmake/conan/librdr/CMakeLists.txt
+++ b/cmake/conan/librdr/CMakeLists.txt
@@ -23,7 +23,7 @@ set(${PROJECT_NAME}_SOURCES
 add_library(${PROJECT_NAME} STATIC)
 target_compile_definitions(${PROJECT_NAME} PRIVATE _XZ _VCPKG)
 foreach(file ${${PROJECT_NAME}_SOURCES})
-    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../rdr/${file}")
+    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../rdr/${file}")
 endforeach(file)
 target_link_libraries(${PROJECT_NAME}
     PRIVATE ZLIB::ZLIB
