--- a/cmake/conan/libudtcloud/CMakeLists.txt
+++ b/cmake/conan/libudtcloud/CMakeLists.txt
@@ -7,10 +7,10 @@ set(${PROJECT_NAME}_SOURCES
     proxy/ringbuffer.cpp
 )
 add_library(${PROJECT_NAME} STATIC)
-target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../UdtCloudlib")
-target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../UdtCloudlib/proxy")
+target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../UdtCloudlib")
+target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../UdtCloudlib/proxy")
 foreach(file ${${PROJECT_NAME}_SOURCES})
-    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../UdtCloudlib/${file}")
+    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../UdtCloudlib/${file}")
 endforeach(file)
 target_link_libraries(${PROJECT_NAME}
     libudt4
