--- a/cmake/conan/logmessages/CMakeLists.txt
+++ b/cmake/conan/logmessages/CMakeLists.txt
@@ -13,7 +13,7 @@ set(${PROJECT_NAME}_MESSAGES
 )
 add_library(${PROJECT_NAME} SHARED)
 foreach(file ${${PROJECT_NAME}_MESSAGES})
-    set(file "${CMAKE_SOURCE_DIR}/../addon/eventMessageLogger/${file}")
+    set(file "${CMAKE_SOURCE_DIR}/../../addon/eventMessageLogger/${file}")
     target_sources(${PROJECT_NAME} PRIVATE "${file}")
     get_filename_component(header ${file} NAME)
     string(REGEX REPLACE "\.mc$" ".h" header ${header})
@@ -31,9 +31,9 @@ foreach(file ${${PROJECT_NAME}_MESSAGES})
     )
     target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_BINARY_DIR}")
 endforeach(file)
-target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../addon/eventMessageLogger/messages.rc")
-set_source_files_properties(${CMAKE_SOURCE_DIR}/../addon/eventMessageLogger/messages.rc LANGUAGE RC)
-set_source_files_properties(${CMAKE_SOURCE_DIR}/../addon/eventMessageLogger/messages.rc OBJECT_DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/MSG00001.bin)
+target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../addon/eventMessageLogger/messages.rc")
+set_source_files_properties(${CMAKE_SOURCE_DIR}/../../addon/eventMessageLogger/messages.rc LANGUAGE RC)
+set_source_files_properties(${CMAKE_SOURCE_DIR}/../../addon/eventMessageLogger/messages.rc OBJECT_DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/MSG00001.bin)
 target_compile_definitions(${PROJECT_NAME} PRIVATE WIN32;NDEBUG;_WINDOWS;_USRDLL;LOGMESSAGES_EXPORTS)
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE "CXX" )
