--- a/cmake/conan/MSLogonACL/CMakeLists.txt
+++ b/cmake/conan/MSLogonACL/CMakeLists.txt
@@ -8,10 +8,10 @@ set(${PROJECT_NAME}_SOURCES
 )
 add_executable(${PROJECT_NAME})
 foreach(file ${${PROJECT_NAME}_SOURCES})
-    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../addon/ms-logon/MSLogonACL/${file}")
+    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../addon/ms-logon/MSLogonACL/${file}")
 endforeach(file)
-target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../addon/ms-logon/MSLogonACL/MSLogonACL.rc")
-set_source_files_properties(${CMAKE_SOURCE_DIR}/../addon/ms-logon/MSLogonACL/MSLogonACL.rc LANGUAGE RC)
+target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../addon/ms-logon/MSLogonACL/MSLogonACL.rc")
+set_source_files_properties(${CMAKE_SOURCE_DIR}/../../addon/ms-logon/MSLogonACL/MSLogonACL.rc LANGUAGE RC)
 target_compile_definitions(${PROJECT_NAME} PRIVATE UNICODE=1 _UNICODE=1)
 if (MINGW)
     target_link_options(${PROJECT_NAME} PRIVATE "-municode")
