--- a/cmake/conan/SecureVNCPlugin/CMakeLists.txt
+++ b/cmake/conan/SecureVNCPlugin/CMakeLists.txt
@@ -20,10 +20,10 @@ set(${PROJECT_NAME}_SOURCES
 )
 add_library(${PROJECT_NAME} SHARED)
 foreach(file ${${PROJECT_NAME}_SOURCES})
-    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../DSMPlugin/SecureVNC/SecureVNCPlugin/${file}")
+    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../DSMPlugin/SecureVNC/SecureVNCPlugin/${file}")
 endforeach(file)
-target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../DSMPlugin/SecureVNC/SecureVNCPlugin/SecureVNCPlugin.rc")
-set_source_files_properties(${CMAKE_SOURCE_DIR}/../DSMPlugin/SecureVNC/SecureVNCPlugin/SecureVNCPlugin.rc LANGUAGE RC)
+target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../DSMPlugin/SecureVNC/SecureVNCPlugin/SecureVNCPlugin.rc")
+set_source_files_properties(${CMAKE_SOURCE_DIR}/../../DSMPlugin/SecureVNC/SecureVNCPlugin/SecureVNCPlugin.rc LANGUAGE RC)
 target_compile_definitions(${PROJECT_NAME} PRIVATE WIN32 NDEBUG _WINDOWS _USRDLL SECUREVNCPLUGIN_EXPORTS)
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
 target_link_libraries(${PROJECT_NAME} PRIVATE OpenSSL::SSL)
