--- a/cmake/conan/authadmin/CMakeLists.txt
+++ b/cmake/conan/authadmin/CMakeLists.txt
@@ -6,9 +6,9 @@ set(${PROJECT_NAME}_SOURCES
 )
 add_library(${PROJECT_NAME} SHARED)
 foreach(file ${${PROJECT_NAME}_SOURCES})
-    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../addon/ms-logon/authadm/${file}")
+    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../addon/ms-logon/authadm/${file}")
 endforeach(file)
-target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../addon/ms-logon/authadm/authadmin.rc")
+target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../addon/ms-logon/authadm/authadmin.rc")
 set_source_files_properties(${CMAKE_SOURCE_DIR}/../addon/ms-logon/authadm/authadmin.rc LANGUAGE RC)
 target_compile_definitions(${PROJECT_NAME} PRIVATE WIN32 NDEBUG _WINDOWS AUTHADMIN_EXPORTS)
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
