--- a/cmake/conan/ldapauth/CMakeLists.txt
+++ b/cmake/conan/ldapauth/CMakeLists.txt
@@ -6,10 +6,10 @@ set(${PROJECT_NAME}_SOURCES
 )
 add_library(${PROJECT_NAME} SHARED)
 foreach(file ${${PROJECT_NAME}_SOURCES})
-    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../addon/ms-logon/ldapauth/${file}")
+    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../addon/ms-logon/ldapauth/${file}")
 endforeach(file)
-target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../addon/ms-logon/ldapauth/ldapAuth.rc")
-set_source_files_properties(${CMAKE_SOURCE_DIR}/../addon/ms-logon/ldapauth/ldapAuth.rc LANGUAGE RC)
+target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../addon/ms-logon/ldapauth/ldapAuth.rc")
+set_source_files_properties(${CMAKE_SOURCE_DIR}/../../addon/ms-logon/ldapauth/ldapAuth.rc LANGUAGE RC)
 target_compile_definitions(${PROJECT_NAME} PRIVATE NDEBUG WIN32 _WINDOWS LDAPAUTH_EXPORTS UNICODE=1 _UNICODE=1)
 if (MINGW)
     target_link_options(${PROJECT_NAME} PRIVATE "-municode")
