--- a/cmake/conan/libzip32/CMakeLists.txt
+++ b/cmake/conan/libzip32/CMakeLists.txt
@@ -19,6 +19,6 @@ set(${PROJECT_NAME}_SOURCES
 )
 add_library(${PROJECT_NAME} STATIC)
 foreach(file ${${PROJECT_NAME}_SOURCES})
-    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../zipunzip_src/zip20/${file}")
+    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../zipunzip_src/zip20/${file}")
 endforeach(file)
 target_compile_definitions(${PROJECT_NAME} PRIVATE NDEBUG _WINDOWS WIN32 NO_ASM WINDLL MSDOS USE_ZIPMAIN ZIPLIB)
