--- a/cmake/conan/libzipunzip/CMakeLists.txt
+++ b/cmake/conan/libzipunzip/CMakeLists.txt
@@ -22,6 +22,6 @@ set(${PROJECT_NAME}_SOURCES
 )
 add_library(${PROJECT_NAME} STATIC)
 foreach(file ${${PROJECT_NAME}_SOURCES})
-    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../zipunzip_src/unzip/${file}")
+    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../zipunzip_src/unzip/${file}")
 endforeach(file)
 target_compile_definitions(${PROJECT_NAME} PRIVATE NDEBUG _WINDOWS WIN32 WINDLL DLL UNZIPLIB USE_EF_UT_TIME)
