--- a/cmake/conan/testauth/CMakeLists.txt
+++ b/cmake/conan/testauth/CMakeLists.txt
@@ -6,7 +6,7 @@ set(${PROJECT_NAME}_SOURCES
 )
 add_executable(${PROJECT_NAME})
 foreach(file ${${PROJECT_NAME}_SOURCES})
-    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../addon/ms-logon/testauth/${file}")
+    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../addon/ms-logon/testauth/${file}")
 endforeach(file)
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_BINARY_DIR}/ultravnc)
 if (MSVC)
