--- a/cmake/conan/workgrpdomnt4/CMakeLists.txt
+++ b/cmake/conan/workgrpdomnt4/CMakeLists.txt
@@ -6,10 +6,10 @@ set(${PROJECT_NAME}_SOURCES
 )
 add_library(${PROJECT_NAME} SHARED)
 foreach(file ${${PROJECT_NAME}_SOURCES})
-    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../addon/ms-logon/workgrpdomnt4/${file}")
+    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../addon/ms-logon/workgrpdomnt4/${file}")
 endforeach(file)
-target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../addon/ms-logon/workgrpdomnt4/workgrpdomnt4.rc")
-set_source_files_properties(${CMAKE_SOURCE_DIR}/../addon/ms-logon/workgrpdomnt4/workgrpdomnt4.rc LANGUAGE RC)
+target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../addon/ms-logon/workgrpdomnt4/workgrpdomnt4.rc")
+set_source_files_properties(${CMAKE_SOURCE_DIR}/../../addon/ms-logon/workgrpdomnt4/workgrpdomnt4.rc LANGUAGE RC)
 target_compile_definitions(${PROJECT_NAME} PRIVATE WIN32 NDEBUG _WINDOWS WORKGRPDOMNT4_EXPORTS)
 if (MINGW)
     target_link_options(${PROJECT_NAME} PRIVATE "-municode")
