--- a/cmake/libudt4/CMakeLists.txt
+++ b/cmake/libudt4/CMakeLists.txt
@@ -17,9 +17,9 @@ set(${PROJECT_NAME}_SOURCES
     src/window.cpp
 )
 add_library(${PROJECT_NAME} STATIC)
-target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../udt4")
+target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../udt4")
 foreach(file ${${PROJECT_NAME}_SOURCES})
-    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../udt4/${file}")
+    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/../../udt4/${file}")
 endforeach(file)
 target_link_libraries(${PROJECT_NAME}
     ws2_32
