--- a/conan/cmake/CMakeLists.txt
+++ b/conan/cmake/CMakeLists.txt
@@ -1,8 +1,11 @@
-cmake_minimum_required(VERSION 3.5.0)
+cmake_minimum_required(VERSION 3.15.0) 	# Conan require a minimum version of 3.15.0 patch Error " The CMake policy CMP0091 must be NEW, but is '' "
 
 project(UltraVNC LANGUAGES C CXX RC)
 
 set(CMAKE_CXX_STANDARD 14)
+
+cmake_policy(PUSH)						# Conan require a minimum version of 3.15.0 patch Error " The CMake policy CMP0091 must be NEW, but is '' "
+cmake_policy(SET CMP0091 NEW)			#	
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
