Update gitignore disable Conan V1 command "conan_basic_setup", update Conan imports on conanfile.py from Conan V1 to Conan V2 	modified:   .gitignore 	modified:   conan/cmake/CMakeLists.txt 	modified:   conan/cmake/CMakePresets.json 	modified:   conan/cmake/MSLogonACL/conanfile.py 	modified:   conan/cmake/SecureVNCPlugin/CMakeLists.txt 	modified:   conan/cmake/SecureVNCPlugin/conanfile.py 	modified:   conan/cmake/authSSP/conanfile.py 	modified:   conan/cmake/authadmin/conanfile.py 	modified:   conan/cmake/conan_toolchain.cmake 	modified:   conan/cmake/conanbuild.bat 	modified:   conan/cmake/conanfile.py 	modified:   conan/cmake/conanrun.bat 	modified:   conan/cmake/createpassword/conanfile.py 	modified:   conan/cmake/deactivate_conanbuild.bat 	modified:   conan/cmake/deactivate_conanrun.bat 	modified:   conan/cmake/ldapauth/conanfile.py 	modified:   conan/cmake/ldapauth9x/conanfile.py 	modified:   conan/cmake/ldapauthnt4/conanfile.py 	modified:   conan/cmake/libomnithread/conanfile.py 	modified:   conan/cmake/librdr/CMakeLists.txt 	modified:   conan/cmake/librdr/conanfile.py 	modified:   conan/cmake/libudt4/conanfile.py 	modified:   conan/cmake/libudtcloud/conanfile.py 	modified:   conan/cmake/libzip32/conanfile.py 	modified:   conan/cmake/libzipunzip/conanfile.py 	modified:   conan/cmake/logging/conanfile.py 	modified:   conan/cmake/logmessages/conanfile.py 	modified:   conan/cmake/repeater/conanfile.py 	modified:   conan/cmake/setcad/conanfile.py 	modified:   conan/cmake/setpasswd/conanfile.py 	modified:   conan/cmake/testauth/conanfile.py 	modified:   conan/cmake/uvnc_settings/conanfile.py 	modified:   conan/cmake/uvnckeyboardhelper/conanfile.py 	modified:   conan/cmake/vnchooks/conanfile.py 	modified:   conan/cmake/vncviewer/CMakeLists.txt 	modified:   conan/cmake/vncviewer/conanfile.py 	modified:   conan/cmake/winvnc/CMakeLists.txt 	modified:   conan/cmake/winvnc/conanfile.py 	modified:   conan/cmake/workgrpdomnt4/conanfile.py 	modified:   conan/readmeConan.txt

--- a/.gitignore
+++ b/.gitignore
@@ -153,19 +153,21 @@ CMakeUserPresets.json
 
 
 # Conan Specific gitignore
-cmake/conan/CMakeCache.txt
-cmake/conan/CMakeFiles/
+conan/cmake/CMakeCache.txt
+conan/cmake/CMakeFiles/
 #v- Until I have specific folders of my computer on these one
-cmake/conan/CMakePresets.json
-cmake/conan/cmakedeps_macros.cmake
-cmake/conan/conan_toolchain.cmake
-cmake/conan/conanbuild.bat
-cmake/conan/conanbuildenv-release-x86_64.bat
-cmake/conan/conandeps_legacy.cmake
-cmake/conan/conanrun.bat
-cmake/conan/conanrunenv-release-x86_64.bat
-cmake/conan/deactivate_conanbuild.bat
-cmake/conan/deactivate_conanrun.bat
+conan/cmake/CMakePresets.json
+conan/cmake/cmakedeps_macros.cmake
+conan/cmake/conan_toolchain.cmake
+conan/cmake/conanbuild.bat
+conan/cmake/conanbuildenv-release-x86_64.bat
+conan/cmake/conanbuildenv-relwithdebinfo-x86_64.bat
+conan/cmake/conandeps_legacy.cmake
+conan/cmake/conanrun.bat
+conan/cmake/conanrunenv-release-x86_64.bat
+conan/cmake/conanrunenv-relwithdebinfo-x86_64.bat
+conan/cmake/deactivate_conanbuild.bat
+conan/cmake/deactivate_conanrun.bat
 
 # End Conan Specific gitignore
 
