--- a/conan/cmake/CMakeLists.txt
+++ b/conan/cmake/CMakeLists.txt
@@ -8,7 +8,8 @@ cmake_policy(PUSH)						# Conan require a minimum version of 3.15.0 patch Error 
 cmake_policy(SET CMP0091 NEW)			#	
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-conan_basic_setup()
+#conan_basic_setup() #<- Disable old Conan V1 command: " CMake Error at CMakeLists.txt:11 (conan_basic_setup): Unknown CMake command "conan_basic_setup". "
+
 
 if (MINGW)
     set(CMAKE_C_FLAGS "-Wno-write-strings")
