--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -2,33 +2,131 @@ cmake_minimum_required(VERSION 3.5.0)
 
 project(UltraVNC LANGUAGES C CXX RC)
 
+# CXX Default language for CMAKE
+# Uncomment line 14 for MSVC and other legacy compiler code and comment line 17 use for Qt
+# Uncomment line 17 for Qt and actual code and comment line	14 use MSVC and other legacy compiler code
 set(CMAKE_CXX_STANDARD 14)
-if (MINGW)
-    set(CMAKE_C_FLAGS "-Wno-write-strings")
-    set(CMAKE_CXX_FLAGS "-Wno-write-strings -Wno-conversion-null")
-endif()
-if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-    add_compile_definitions("_CRT_SECURE_NO_WARNINGS")
-    add_compile_definitions("_WINSOCK_DEPRECATED_NO_WARNINGS")
-    add_compile_definitions("NOMINMAX")
-    set(CMAKE_MFC_FLAG 2)
-endif()
-if( ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64" )
-    add_compile_definitions("_X64")
+#set(CMAKE_CXX_STANDARD 17)
+
+#if(CMAKE_GENERATOR MATCHES "Ninja|Unix Makefiles")
+#    message(STATUS "CMake is running under Qt Creator.")
+#elseif(CMAKE_GENERATOR MATCHES "Visual Studio")
+#    message(STATUS "CMake is running under Visual Studio.")
+#else()
+#    message(STATUS "Unknown IDE or generator.")
+#endif()
+
+# Original UltraVNC Source
+#if CMAKE_CXX_STANDARD equal 14 #(sources files compile with msvc (or legacy compiler of UltraVNC))
+# LegacyUltraVNC
+if (CMAKE_CXX_STANDARD STREQUAL 14)
+	# Use set(CMAKE_CXX_STANDARD 14)
+	if (MINGW)
+		set(CMAKE_C_FLAGS "-Wno-write-strings")
+		set(CMAKE_CXX_FLAGS "-Wno-write-strings -Wno-conversion-null")
+	endif()
+	if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+		add_compile_definitions("_CRT_SECURE_NO_WARNINGS")
+		add_compile_definitions("_WINSOCK_DEPRECATED_NO_WARNINGS")
+		add_compile_definitions("NOMINMAX")
+		set(CMAKE_MFC_FLAG 2)
+	endif()
+	if( ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64" )
+		add_compile_definitions("_X64")
+	endif()
+	
+	option(asan "Build with address sanitizer enabled.")
+	if (asan)
+		add_compile_options(-fsanitize=address)
+		add_link_options(-fsanitize=address)
+		install(FILES "c:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.40.33807/bin/Hostx64/x64/clang_rt.asan_dynamic-x86_64.dll" DESTINATION ${CMAKE_BINARY_DIR}/ultravnc OPTIONAL)
+	endif()
+	
+	if (MINGW)
+		install(FILES /usr/lib/gcc/x86_64-w64-mingw32/13-win32/libstdc++-6.dll DESTINATION ${CMAKE_BINARY_DIR}/ultravnc OPTIONAL)
+		install(FILES /usr/lib/gcc/x86_64-w64-mingw32/13-win32/libgcc_s_seh-1.dll DESTINATION ${CMAKE_BINARY_DIR}/ultravnc OPTIONAL)
+	endif()
+# End LegacyUltraVNC
+
+# Qt Community Tests UltraVNC Source (In Progress)
+# elseif CMAKE_CXX_STANDARD equal 17 (sources files compile with Qt)
+# CuteUltraVNC
+elseif (CMAKE_CXX_STANDARD STREQUAL 17)
+	# C Alternate language for CMAKE use for Qt Community Tests
+	# Use set(CMAKE_CXX_STANDARD 17)
+	
+	if (WIN32)
+		project(ultravnc LANGUAGES CXX)
+	elseif (UNIX)
+		project(ultravnc)
+	endif()
+
+	set(CMAKE_CONFIGURATION_TYPES "Release;ReWithDebInfo" CACHE STRING "" FORCE)
+	
+	#
+	# Inclusion of Qt
+	#
+	set(CMAKE_INCLUDE_CURRENT_DIR ON)
+	set(CMAKE_AUTOMOC ON)
+	set(CMAKE_AUTOUIC ON)
+	set(CMAKE_PREFIX_PATH $ENV{QTDIR})
+	find_package(Qt6Core REQUIRED)
+	find_package(Qt6Widgets REQUIRED)
+	# And all packages Qt6 you need
+	
+	# Not use on that level of CMake Qt
+	##
+	## Inclusion of Project Files
+	## 
+	#set(FORMS_DIR "${CMAKE_SOURCE_DIR}/forms")
+	#set(INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include")
+	#set(SOURCES_DIR "${CMAKE_SOURCE_DIR}/src")
+	## Create the folders if doesn't exist
+	#
+	#include_directories(${FORMS_DIR})
+	#include_directories(${INCLUDE_DIR})
+	#include_directories(${SOURCE_DIR})
+	#
+	#file(GLOB_RECURSE SOURCES
+	#	"${FORMS_DIR}/*.ui"
+	#	"${FORMS_DIR}/*.qrc"
+	#	"${INCLUDE_DIR}/*.h"
+	#	"${SOURCE_DIR}/*.cpp"
+	#)
+	
+	#
+	# Setup exectuable
+	#
+	# Enable debug logging on RELWITHDEBINFO configuration
+	set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS
+		$<$<CONFIG:RELWITHDEBINFO>:QT_MESSAGELOGCONTEXT>
+	)
+	
+	# Add the forms directory to the AUTOUIC search
+	set(CMAKE_AUTOUIC_SEARCH_PATHS ${CMAKE_AUTOUIC_SEARCH_PATHS} ${FORMS_DIR})
+	
+	# Add the executable
+	if (WIN32)
+		add_executable(ultravnc WIN32 ${SOURCES})
+	elseif (UNIX)
+		add_executable(ultravnc ${SOURCES})
+	endif()
+	
+	# Add the target includes for ultravnc
+	target_include_directories(ultravnc PRIVATE ${FORMS_DIR})
+	target_include_directories(ultravnc PRIVATE ${INCLUDE_DIR})
+	target_include_directories(ultravnc PRIVATE ${SOURCE_DIR})
+	
+	# Linking Libraries
+	target_link_libraries(ultravnc Qt6::Widgets)
+	
+# End CuteUltraVNC
+else ()
+	# To Do Raise an error CMAKE_CXX_STANDARD isn't 14 or 17
+
 endif()
 
-option(asan "Build with address sanitizer enabled.")
-if (asan)
-    add_compile_options(-fsanitize=address)
-    add_link_options(-fsanitize=address)
-    install(FILES "c:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.40.33807/bin/Hostx64/x64/clang_rt.asan_dynamic-x86_64.dll" DESTINATION ${CMAKE_BINARY_DIR}/ultravnc OPTIONAL)
-endif()
-
-if (MINGW)
-    install(FILES /usr/lib/gcc/x86_64-w64-mingw32/13-win32/libstdc++-6.dll DESTINATION ${CMAKE_BINARY_DIR}/ultravnc OPTIONAL)
-    install(FILES /usr/lib/gcc/x86_64-w64-mingw32/13-win32/libgcc_s_seh-1.dll DESTINATION ${CMAKE_BINARY_DIR}/ultravnc OPTIONAL)
-endif()
-
+# Original UltraVNC Source
 add_subdirectory(authadmin)
 add_subdirectory(authSSP)
 add_subdirectory(createpassword)
