modified:   cmake/CMakeLists.txt 	modified:   cmake/CMakePresets.json 	modified:   cmake/SecureVNCPlugin/CMakeLists.txt 	modified:   cmake/librdr/CMakeLists.txt 	modified:   cmake/vncviewer/CMakeLists.txt 	modified:   cmake/winvnc/CMakeLists.txt 	modified:   readmeConan.txt

--- a/conan/cmake/SecureVNCPlugin/CMakeLists.txt
+++ b/conan/cmake/SecureVNCPlugin/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 project(SecureVNCPlugin LANGUAGES CXX RC)
 
-include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+#include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake) #<- Disable Using `conan_toolchain.cmake` : `conan_toolchain.cmake` and `conanbuildinfo.cmake` are not usually used together. If you use the toolchain, do not include `conanbuildinfo.cmake`.
 #conan_basic_setup() #<- Disable old Conan V1 command: " CMake Error at CMakeLists.txt:11 (conan_basic_setup): Unknown CMake command "conan_basic_setup". "
 
 find_package(OpenSSL REQUIRED)
