Conan Works for libaries but need changes target folder for the build command 	modified:   .gitignore 	new file:   TempScriptRemoveBuildFilesFromConanCmake.sh 	modified:   conan/cmake/CMakeLists.txt 	modified:   conan/cmake/conan_toolchain.cmake 	modified:   conan/cmake/conandeps_legacy.cmake 	modified:   conan/cmake/conanfile.py 	modified:   conan/cmake/createpassword/CMakeLists.txt 	modified:   conan/cmake/librdr/CMakeLists.txt 	modified:   conan/cmake/vncviewer/CMakeLists.txt 	modified:   conan/cmake/winvnc/CMakeLists.txt

--- a/.gitignore
+++ b/.gitignore
@@ -169,6 +169,100 @@ conan/cmake/conanrunenv-relwithdebinfo-x86_64.bat
 conan/cmake/deactivate_conanbuild.bat
 conan/cmake/deactivate_conanrun.bat
 
+# Others files
+conan/cmake/ALL_BUILD.vcxproj
+conan/cmake/ALL_BUILD.vcxproj.filters
+conan/cmake/FindJPEG.cmake
+conan/cmake/FindLibLZMA.cmake
+conan/cmake/FindZLIB.cmake
+conan/cmake/INSTALL.vcxproj
+conan/cmake/INSTALL.vcxproj.filters
+conan/cmake/LibLZMA-Target-release.cmake
+conan/cmake/LibLZMA-release-x86_64-data.cmake
+conan/cmake/LibLZMAConfig.cmake
+conan/cmake/LibLZMAConfigVersion.cmake
+conan/cmake/LibLZMATargets.cmake
+conan/cmake/UltraVNC.sln
+conan/cmake/ZERO_CHECK.vcxproj
+conan/cmake/ZERO_CHECK.vcxproj.filters
+conan/cmake/ZLIB-Target-release.cmake
+conan/cmake/ZLIB-release-x86_64-data.cmake
+conan/cmake/ZLIBConfig.cmake
+conan/cmake/ZLIBConfigVersion.cmake
+conan/cmake/ZLIBTargets.cmake
+conan/cmake/cmake_install.cmake
+conan/cmake/librdr/ALL_BUILD.vcxproj
+conan/cmake/librdr/ALL_BUILD.vcxproj.filters
+conan/cmake/librdr/INSTALL.vcxproj
+conan/cmake/librdr/INSTALL.vcxproj.filters
+conan/cmake/librdr/cmake_install.cmake
+conan/cmake/librdr/librdr.sln
+conan/cmake/librdr/librdr.vcxproj
+conan/cmake/librdr/librdr.vcxproj.filters
+conan/cmake/libsodium-Target-release.cmake
+conan/cmake/libsodium-config-version.cmake
+conan/cmake/libsodium-config.cmake
+conan/cmake/libsodium-release-x86_64-data.cmake
+conan/cmake/libsodiumTargets.cmake
+conan/cmake/libudt4/ALL_BUILD.vcxproj
+conan/cmake/libudt4/ALL_BUILD.vcxproj.filters
+conan/cmake/libudt4/INSTALL.vcxproj
+conan/cmake/libudt4/INSTALL.vcxproj.filters
+conan/cmake/libudt4/cmake_install.cmake
+conan/cmake/libudt4/libudt4.sln
+conan/cmake/libudt4/libudt4.vcxproj
+conan/cmake/libudt4/libudt4.vcxproj.filters
+conan/cmake/module-JPEG-Target-release.cmake
+conan/cmake/module-JPEG-release-x86_64-data.cmake
+conan/cmake/module-JPEGTargets.cmake
+conan/cmake/module-LibLZMA-Target-release.cmake
+conan/cmake/module-LibLZMA-release-x86_64-data.cmake
+conan/cmake/module-LibLZMATargets.cmake
+conan/cmake/module-ZLIB-Target-release.cmake
+conan/cmake/module-ZLIB-release-x86_64-data.cmake
+conan/cmake/module-ZLIBTargets.cmake
+conan/cmake/zstd-Target-release.cmake
+conan/cmake/zstd-config-version.cmake
+conan/cmake/zstd-config.cmake
+conan/cmake/zstd-release-x86_64-data.cmake
+conan/cmake/zstdTargets.cmake
+
+
+# Remove directories not Empty folders Git ignore these ones.
+conan/cmake/MSLogonACL/CMakeFiles/
+conan/cmake/authSSP/CMakeFiles/
+conan/cmake/authSSP/Debug/
+conan/cmake/authadmin/CMakeFiles/
+conan/cmake/authadmin/Debug/
+conan/cmake/createpassword/CMakeFiles/
+conan/cmake/ldapauth/CMakeFiles/
+conan/cmake/ldapauth/Debug/
+conan/cmake/ldapauth9x/CMakeFiles/
+conan/cmake/ldapauth9x/Debug/
+conan/cmake/ldapauthnt4/CMakeFiles/
+conan/cmake/ldapauthnt4/Debug/
+conan/cmake/libomnithread/CMakeFiles/
+conan/cmake/librdr/CMakeFiles/
+conan/cmake/libudt4/CMakeFiles/
+conan/cmake/libudtcloud/CMakeFiles/
+conan/cmake/libzip32/CMakeFiles/
+conan/cmake/libzipunzip/CMakeFiles/
+conan/cmake/logging/CMakeFiles/
+conan/cmake/logging/Debug/
+conan/cmake/logmessages/CMakeFiles/
+conan/cmake/repeater/CMakeFiles/
+conan/cmake/setcad/CMakeFiles/
+conan/cmake/setpasswd/CMakeFiles/
+conan/cmake/testauth/CMakeFiles/
+conan/cmake/uvnc_settings/CMakeFiles/
+conan/cmake/uvnckeyboardhelper/CMakeFiles/
+conan/cmake/vnchooks/CMakeFiles/
+conan/cmake/vnchooks/Debug/
+conan/cmake/vncviewer/CMakeFiles/
+conan/cmake/winvnc/CMakeFiles/
+conan/cmake/workgrpdomnt4/CMakeFiles/
+conan/cmake/workgrpdomnt4/Debug/
+
 # End Conan Specific gitignore
 
 
