Adding Conan Specific files to gitignore because they are usins specific path of my computer 	modified:   .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -155,6 +155,414 @@ conan/cmake/conanrunenv-relwithdebinfo-x86_64.bat
 conan/cmake/deactivate_conanbuild.bat
 conan/cmake/deactivate_conanrun.bat
 
+conan/cmake/MSLogonACL/CMakePresets.json
+conan/cmake/MSLogonACL/cmakedeps_macros.cmake
+conan/cmake/MSLogonACL/conan_toolchain.cmake
+conan/cmake/MSLogonACL/conanbuild.bat
+conan/cmake/MSLogonACL/conanbuildenv-release-x86_64.bat
+conan/cmake/MSLogonACL/conandeps_legacy.cmake
+conan/cmake/MSLogonACL/conanrun.bat
+conan/cmake/MSLogonACL/conanrunenv-release-x86_64.bat
+conan/cmake/MSLogonACL/deactivate_conanbuild.bat
+conan/cmake/MSLogonACL/deactivate_conanrun.bat
+
+conan/cmake/SecureVNCPlugin/CMakePresets.json
+conan/cmake/SecureVNCPlugin/cmakedeps_macros.cmake
+conan/cmake/SecureVNCPlugin/conan_toolchain.cmake
+conan/cmake/SecureVNCPlugin/conanbuild.bat
+conan/cmake/SecureVNCPlugin/conanbuildenv-release-x86_64.bat
+conan/cmake/SecureVNCPlugin/conandeps_legacy.cmake
+conan/cmake/SecureVNCPlugin/conanrun.bat
+conan/cmake/SecureVNCPlugin/conanrunenv-release-x86_64.bat
+conan/cmake/SecureVNCPlugin/deactivate_conanbuild.bat
+conan/cmake/SecureVNCPlugin/deactivate_conanrun.bat
+
+conan/cmake/authSSP/CMakePresets.json
+conan/cmake/authSSP/cmakedeps_macros.cmake
+conan/cmake/authSSP/conan_toolchain.cmake
+conan/cmake/authSSP/conanbuild.bat
+conan/cmake/authSSP/conanbuildenv-release-x86_64.bat
+conan/cmake/authSSP/conandeps_legacy.cmake
+conan/cmake/authSSP/conanrun.bat
+conan/cmake/authSSP/conanrunenv-release-x86_64.bat
+conan/cmake/authSSP/deactivate_conanbuild.bat
+conan/cmake/authSSP/deactivate_conanrun.bat
+
+conan/cmake/authadmin/CMakePresets.json
+conan/cmake/authadmin/cmakedeps_macros.cmake
+conan/cmake/authadmin/conan_toolchain.cmake
+conan/cmake/authadmin/conanbuild.bat
+conan/cmake/authadmin/conanbuildenv-release-x86_64.bat
+conan/cmake/authadmin/conandeps_legacy.cmake
+conan/cmake/authadmin/conanrun.bat
+conan/cmake/authadmin/conanrunenv-release-x86_64.bat
+conan/cmake/authadmin/deactivate_conanbuild.bat
+conan/cmake/authadmin/deactivate_conanrun.bat
+
+conan/cmake/createpassword/CMakePresets.json
+conan/cmake/createpassword/cmakedeps_macros.cmake
+conan/cmake/createpassword/conan_toolchain.cmake
+conan/cmake/createpassword/conanbuild.bat
+conan/cmake/createpassword/conanbuildenv-release-x86_64.bat
+conan/cmake/createpassword/conandeps_legacy.cmake
+conan/cmake/createpassword/conanrun.bat
+conan/cmake/createpassword/conanrunenv-release-x86_64.bat
+conan/cmake/createpassword/deactivate_conanbuild.bat
+conan/cmake/createpassword/deactivate_conanrun.bat
+
+conan/cmake/ldapauth/CMakePresets.json
+conan/cmake/ldapauth/cmakedeps_macros.cmake
+conan/cmake/ldapauth/conan_toolchain.cmake
+conan/cmake/ldapauth/conanbuild.bat
+conan/cmake/ldapauth/conanbuildenv-release-x86_64.bat
+conan/cmake/ldapauth/conandeps_legacy.cmake
+conan/cmake/ldapauth/conanrun.bat
+conan/cmake/ldapauth/conanrunenv-release-x86_64.bat
+conan/cmake/ldapauth/deactivate_conanbuild.bat
+conan/cmake/ldapauth/deactivate_conanrun.bat
+
+conan/cmake/ldapauth9x/CMakePresets.json
+conan/cmake/ldapauth9x/cmakedeps_macros.cmake
+conan/cmake/ldapauth9x/conan_toolchain.cmake
+conan/cmake/ldapauth9x/conanbuild.bat
+conan/cmake/ldapauth9x/conanbuildenv-release-x86_64.bat
+conan/cmake/ldapauth9x/conandeps_legacy.cmake
+conan/cmake/ldapauth9x/conanrun.bat
+conan/cmake/ldapauth9x/conanrunenv-release-x86_64.bat
+conan/cmake/ldapauth9x/deactivate_conanbuild.bat
+conan/cmake/ldapauth9x/deactivate_conanrun.bat
+
+conan/cmake/ldapauthnt4/CMakePresets.json
+conan/cmake/ldapauthnt4/cmakedeps_macros.cmake
+conan/cmake/ldapauthnt4/conan_toolchain.cmake
+conan/cmake/ldapauthnt4/conanbuild.bat
+conan/cmake/ldapauthnt4/conanbuildenv-release-x86_64.bat
+conan/cmake/ldapauthnt4/conandeps_legacy.cmake
+conan/cmake/ldapauthnt4/conanrun.bat
+conan/cmake/ldapauthnt4/conanrunenv-release-x86_64.bat
+conan/cmake/ldapauthnt4/deactivate_conanbuild.bat
+conan/cmake/ldapauthnt4/deactivate_conanrun.bat
+
+conan/cmake/libomnithread/CMakePresets.json
+conan/cmake/libomnithread/cmakedeps_macros.cmake
+conan/cmake/libomnithread/conan_toolchain.cmake
+conan/cmake/libomnithread/conanbuild.bat
+conan/cmake/libomnithread/conanbuildenv-release-x86_64.bat
+conan/cmake/libomnithread/conandeps_legacy.cmake
+conan/cmake/libomnithread/conanrun.bat
+conan/cmake/libomnithread/conanrunenv-release-x86_64.bat
+conan/cmake/libomnithread/deactivate_conanbuild.bat
+conan/cmake/libomnithread/deactivate_conanrun.bat
+
+conan/cmake/librdr/CMakePresets.json
+conan/cmake/librdr/FindLibLZMA.cmake
+conan/cmake/librdr/FindZLIB.cmake
+conan/cmake/librdr/LibLZMA-Target-release.cmake
+conan/cmake/librdr/LibLZMA-release-x86_64-data.cmake
+conan/cmake/librdr/LibLZMAConfig.cmake
+conan/cmake/librdr/LibLZMAConfigVersion.cmake
+conan/cmake/librdr/LibLZMATargets.cmake
+conan/cmake/librdr/ZLIB-Target-release.cmake
+conan/cmake/librdr/ZLIB-release-x86_64-data.cmake
+conan/cmake/librdr/ZLIBConfig.cmake
+conan/cmake/librdr/ZLIBConfigVersion.cmake
+conan/cmake/librdr/ZLIBTargets.cmake
+conan/cmake/librdr/cmakedeps_macros.cmake
+conan/cmake/librdr/conan_toolchain.cmake
+conan/cmake/librdr/conanbuild.bat
+conan/cmake/librdr/conanbuildenv-release-x86_64.bat
+conan/cmake/librdr/conandeps_legacy.cmake
+conan/cmake/librdr/conanrun.bat
+conan/cmake/librdr/conanrunenv-release-x86_64.bat
+conan/cmake/librdr/deactivate_conanbuild.bat
+conan/cmake/librdr/deactivate_conanrun.bat
+conan/cmake/librdr/module-LibLZMA-Target-release.cmake
+conan/cmake/librdr/module-LibLZMA-release-x86_64-data.cmake
+conan/cmake/librdr/module-LibLZMATargets.cmake
+conan/cmake/librdr/module-ZLIB-Target-release.cmake
+conan/cmake/librdr/module-ZLIB-release-x86_64-data.cmake
+conan/cmake/librdr/module-ZLIBTargets.cmake
+conan/cmake/librdr/zstd-Target-release.cmake
+conan/cmake/librdr/zstd-config-version.cmake
+conan/cmake/librdr/zstd-config.cmake
+conan/cmake/librdr/zstd-release-x86_64-data.cmake
+conan/cmake/librdr/zstdTargets.cmake
+
+conan/cmake/libzip32/CMakePresets.json
+conan/cmake/libzip32/cmakedeps_macros.cmake
+conan/cmake/libzip32/conan_toolchain.cmake
+conan/cmake/libzip32/conanbuild.bat
+conan/cmake/libzip32/conanbuildenv-release-x86_64.bat
+conan/cmake/libzip32/conandeps_legacy.cmake
+conan/cmake/libzip32/conanrun.bat
+conan/cmake/libzip32/conanrunenv-release-x86_64.bat
+conan/cmake/libzip32/deactivate_conanbuild.bat
+conan/cmake/libzip32/deactivate_conanrun.bat
+
+conan/cmake/libzipunzip/CMakePresets.json
+conan/cmake/libzipunzip/cmakedeps_macros.cmake
+conan/cmake/libzipunzip/conan_toolchain.cmake
+conan/cmake/libzipunzip/conanbuild.bat
+conan/cmake/libzipunzip/conanbuildenv-release-x86_64.bat
+conan/cmake/libzipunzip/conandeps_legacy.cmake
+conan/cmake/libzipunzip/conanrun.bat
+conan/cmake/libzipunzip/conanrunenv-release-x86_64.bat
+conan/cmake/libzipunzip/deactivate_conanbuild.bat
+conan/cmake/libzipunzip/deactivate_conanrun.bat
+
+conan/cmake/logging/CMakePresets.json
+conan/cmake/logging/cmakedeps_macros.cmake
+conan/cmake/logging/conan_toolchain.cmake
+conan/cmake/logging/conanbuild.bat
+conan/cmake/logging/conanbuildenv-release-x86_64.bat
+conan/cmake/logging/conandeps_legacy.cmake
+conan/cmake/logging/conanrun.bat
+conan/cmake/logging/conanrunenv-release-x86_64.bat
+conan/cmake/logging/deactivate_conanbuild.bat
+conan/cmake/logging/deactivate_conanrun.bat
+
+conan/cmake/logmessages/CMakePresets.json
+conan/cmake/logmessages/FindJPEG.cmake
+conan/cmake/logmessages/FindLibLZMA.cmake
+conan/cmake/logmessages/FindZLIB.cmake
+conan/cmake/logmessages/LibLZMA-Target-release.cmake
+conan/cmake/logmessages/LibLZMA-release-x86_64-data.cmake
+conan/cmake/logmessages/LibLZMAConfig.cmake
+conan/cmake/logmessages/LibLZMAConfigVersion.cmake
+conan/cmake/logmessages/LibLZMATargets.cmake
+conan/cmake/logmessages/ZLIB-Target-release.cmake
+conan/cmake/logmessages/ZLIB-release-x86_64-data.cmake
+conan/cmake/logmessages/ZLIBConfig.cmake
+conan/cmake/logmessages/ZLIBConfigVersion.cmake
+conan/cmake/logmessages/ZLIBTargets.cmake
+conan/cmake/logmessages/cmakedeps_macros.cmake
+conan/cmake/logmessages/conan_toolchain.cmake
+conan/cmake/logmessages/conanbuild.bat
+conan/cmake/logmessages/conanbuildenv-release-x86_64.bat
+conan/cmake/logmessages/conandeps_legacy.cmake
+conan/cmake/logmessages/conanrun.bat
+conan/cmake/logmessages/conanrunenv-release-x86_64.bat
+conan/cmake/logmessages/deactivate_conanbuild.bat
+conan/cmake/logmessages/deactivate_conanrun.bat
+conan/cmake/logmessages/libjpeg-turbo-Target-release.cmake
+conan/cmake/logmessages/libjpeg-turbo-config-version.cmake
+conan/cmake/logmessages/libjpeg-turbo-config.cmake
+conan/cmake/logmessages/libjpeg-turbo-release-x86_64-data.cmake
+conan/cmake/logmessages/libjpeg-turboTargets.cmake
+conan/cmake/logmessages/libsodium-Target-release.cmake
+conan/cmake/logmessages/libsodium-config-version.cmake
+conan/cmake/logmessages/libsodium-config.cmake
+conan/cmake/logmessages/libsodium-release-x86_64-data.cmake
+conan/cmake/logmessages/libsodiumTargets.cmake
+conan/cmake/logmessages/module-JPEG-Target-release.cmake
+conan/cmake/logmessages/module-JPEG-release-x86_64-data.cmake
+conan/cmake/logmessages/module-JPEGTargets.cmake
+conan/cmake/logmessages/module-LibLZMA-Target-release.cmake
+conan/cmake/logmessages/module-LibLZMA-release-x86_64-data.cmake
+conan/cmake/logmessages/module-LibLZMATargets.cmake
+conan/cmake/logmessages/module-ZLIB-Target-release.cmake
+conan/cmake/logmessages/module-ZLIB-release-x86_64-data.cmake
+conan/cmake/logmessages/module-ZLIBTargets.cmake
+conan/cmake/logmessages/zstd-Target-release.cmake
+conan/cmake/logmessages/zstd-config-version.cmake
+conan/cmake/logmessages/zstd-config.cmake
+conan/cmake/logmessages/zstd-release-x86_64-data.cmake
+conan/cmake/logmessages/zstdTargets.cmake
+
+conan/cmake/repeater/CMakePresets.json
+conan/cmake/repeater/cmakedeps_macros.cmake
+conan/cmake/repeater/conan_toolchain.cmake
+conan/cmake/repeater/conanbuild.bat
+conan/cmake/repeater/conanbuildenv-release-x86_64.bat
+conan/cmake/repeater/conandeps_legacy.cmake
+conan/cmake/repeater/conanrun.bat
+conan/cmake/repeater/conanrunenv-release-x86_64.bat
+conan/cmake/repeater/deactivate_conanbuild.bat
+conan/cmake/repeater/deactivate_conanrun.bat
+
+conan/cmake/setcad/CMakePresets.json
+conan/cmake/setcad/cmakedeps_macros.cmake
+conan/cmake/setcad/conan_toolchain.cmake
+conan/cmake/setcad/conanbuild.bat
+conan/cmake/setcad/conanbuildenv-release-x86_64.bat
+conan/cmake/setcad/conandeps_legacy.cmake
+conan/cmake/setcad/conanrun.bat
+conan/cmake/setcad/conanrunenv-release-x86_64.bat
+conan/cmake/setcad/deactivate_conanbuild.bat
+conan/cmake/setcad/deactivate_conanrun.bat
+
+conan/cmake/setpasswd/CMakePresets.json
+conan/cmake/setpasswd/cmakedeps_macros.cmake
+conan/cmake/setpasswd/conan_toolchain.cmake
+conan/cmake/setpasswd/conanbuild.bat
+conan/cmake/setpasswd/conanbuildenv-release-x86_64.bat
+conan/cmake/setpasswd/conandeps_legacy.cmake
+conan/cmake/setpasswd/conanrun.bat
+conan/cmake/setpasswd/conanrunenv-release-x86_64.bat
+conan/cmake/setpasswd/deactivate_conanbuild.bat
+conan/cmake/setpasswd/deactivate_conanrun.bat
+
+conan/cmake/testauth/CMakePresets.json
+conan/cmake/testauth/cmakedeps_macros.cmake
+conan/cmake/testauth/conan_toolchain.cmake
+conan/cmake/testauth/conanbuild.bat
+conan/cmake/testauth/conanbuildenv-release-x86_64.bat
+conan/cmake/testauth/conandeps_legacy.cmake
+conan/cmake/testauth/conanrun.bat
+conan/cmake/testauth/conanrunenv-release-x86_64.bat
+conan/cmake/testauth/deactivate_conanbuild.bat
+conan/cmake/testauth/deactivate_conanrun.bat
+
+conan/cmake/ultravnc_service/CMakePresets.json
+conan/cmake/ultravnc_service/cmakedeps_macros.cmake
+conan/cmake/ultravnc_service/conan_toolchain.cmake
+conan/cmake/ultravnc_service/conanbuild.bat
+conan/cmake/ultravnc_service/conanbuildenv-release-x86_64.bat
+conan/cmake/ultravnc_service/conandeps_legacy.cmake
+conan/cmake/ultravnc_service/conanrun.bat
+conan/cmake/ultravnc_service/conanrunenv-release-x86_64.bat
+conan/cmake/ultravnc_service/deactivate_conanbuild.bat
+conan/cmake/ultravnc_service/deactivate_conanrun.bat
+
+conan/cmake/uvnc_settings/CMakePresets.json
+conan/cmake/uvnc_settings/cmakedeps_macros.cmake
+conan/cmake/uvnc_settings/conan_toolchain.cmake
+conan/cmake/uvnc_settings/conanbuild.bat
+conan/cmake/uvnc_settings/conanbuildenv-release-x86_64.bat
+conan/cmake/uvnc_settings/conandeps_legacy.cmake
+conan/cmake/uvnc_settings/conanrun.bat
+conan/cmake/uvnc_settings/conanrunenv-release-x86_64.bat
+conan/cmake/uvnc_settings/deactivate_conanbuild.bat
+conan/cmake/uvnc_settings/deactivate_conanrun.bat
+
+conan/cmake/uvnckeyboardhelper/CMakePresets.json
+conan/cmake/uvnckeyboardhelper/cmakedeps_macros.cmake
+conan/cmake/uvnckeyboardhelper/conan_toolchain.cmake
+conan/cmake/uvnckeyboardhelper/conanbuild.bat
+conan/cmake/uvnckeyboardhelper/conanbuildenv-release-x86_64.bat
+conan/cmake/uvnckeyboardhelper/conandeps_legacy.cmake
+conan/cmake/uvnckeyboardhelper/conanrun.bat
+conan/cmake/uvnckeyboardhelper/conanrunenv-release-x86_64.bat
+conan/cmake/uvnckeyboardhelper/deactivate_conanbuild.bat
+conan/cmake/uvnckeyboardhelper/deactivate_conanrun.bat
+
+conan/cmake/vnchooks/CMakePresets.json
+conan/cmake/vnchooks/cmakedeps_macros.cmake
+conan/cmake/vnchooks/conan_toolchain.cmake
+conan/cmake/vnchooks/conanbuild.bat
+conan/cmake/vnchooks/conanbuildenv-release-x86_64.bat
+conan/cmake/vnchooks/conandeps_legacy.cmake
+conan/cmake/vnchooks/conanrun.bat
+conan/cmake/vnchooks/conanrunenv-release-x86_64.bat
+conan/cmake/vnchooks/deactivate_conanbuild.bat
+conan/cmake/vnchooks/deactivate_conanrun.bat
+
+conan/cmake/vncviewer/CMakePresets.json
+conan/cmake/vncviewer/FindJPEG.cmake
+conan/cmake/vncviewer/FindLibLZMA.cmake
+conan/cmake/vncviewer/FindZLIB.cmake
+conan/cmake/vncviewer/LibLZMA-Target-release.cmake
+conan/cmake/vncviewer/LibLZMA-release-x86_64-data.cmake
+conan/cmake/vncviewer/LibLZMAConfig.cmake
+conan/cmake/vncviewer/LibLZMAConfigVersion.cmake
+conan/cmake/vncviewer/LibLZMATargets.cmake
+conan/cmake/vncviewer/ZLIB-Target-release.cmake
+conan/cmake/vncviewer/ZLIB-release-x86_64-data.cmake
+conan/cmake/vncviewer/ZLIBConfig.cmake
+conan/cmake/vncviewer/ZLIBConfigVersion.cmake
+conan/cmake/vncviewer/ZLIBTargets.cmake
+conan/cmake/vncviewer/cmakedeps_macros.cmake
+conan/cmake/vncviewer/conan_toolchain.cmake
+conan/cmake/vncviewer/conanbuild.bat
+conan/cmake/vncviewer/conanbuildenv-release-x86_64.bat
+conan/cmake/vncviewer/conandeps_legacy.cmake
+conan/cmake/vncviewer/conanrun.bat
+conan/cmake/vncviewer/conanrunenv-release-x86_64.bat
+conan/cmake/vncviewer/deactivate_conanbuild.bat
+conan/cmake/vncviewer/deactivate_conanrun.bat
+conan/cmake/vncviewer/libjpeg-turbo-Target-release.cmake
+conan/cmake/vncviewer/libjpeg-turbo-config-version.cmake
+conan/cmake/vncviewer/libjpeg-turbo-config.cmake
+conan/cmake/vncviewer/libjpeg-turbo-release-x86_64-data.cmake
+conan/cmake/vncviewer/libjpeg-turboTargets.cmake
+conan/cmake/vncviewer/module-JPEG-Target-release.cmake
+conan/cmake/vncviewer/module-JPEG-release-x86_64-data.cmake
+conan/cmake/vncviewer/module-JPEGTargets.cmake
+conan/cmake/vncviewer/module-LibLZMA-Target-release.cmake
+conan/cmake/vncviewer/module-LibLZMA-release-x86_64-data.cmake
+conan/cmake/vncviewer/module-LibLZMATargets.cmake
+conan/cmake/vncviewer/module-ZLIB-Target-release.cmake
+conan/cmake/vncviewer/module-ZLIB-release-x86_64-data.cmake
+conan/cmake/vncviewer/module-ZLIBTargets.cmake
+conan/cmake/vncviewer/zstd-Target-release.cmake
+conan/cmake/vncviewer/zstd-config-version.cmake
+conan/cmake/vncviewer/zstd-config.cmake
+conan/cmake/vncviewer/zstd-release-x86_64-data.cmake
+conan/cmake/vncviewer/zstdTargets.cmake
+
+conan/cmake/winvnc/CMakePresets.json
+conan/cmake/winvnc/FindJPEG.cmake
+conan/cmake/winvnc/FindLibLZMA.cmake
+conan/cmake/winvnc/FindZLIB.cmake
+conan/cmake/winvnc/LibLZMA-Target-release.cmake
+conan/cmake/winvnc/LibLZMA-release-x86_64-data.cmake
+conan/cmake/winvnc/LibLZMAConfig.cmake
+conan/cmake/winvnc/LibLZMAConfigVersion.cmake
+conan/cmake/winvnc/LibLZMATargets.cmake
+conan/cmake/winvnc/ZLIB-Target-release.cmake
+conan/cmake/winvnc/ZLIB-release-x86_64-data.cmake
+conan/cmake/winvnc/ZLIBConfig.cmake
+conan/cmake/winvnc/ZLIBConfigVersion.cmake
+conan/cmake/winvnc/ZLIBTargets.cmake
+conan/cmake/winvnc/cmakedeps_macros.cmake
+conan/cmake/winvnc/conan_toolchain.cmake
+conan/cmake/winvnc/conanbuild.bat
+conan/cmake/winvnc/conanbuildenv-release-x86_64.bat
+conan/cmake/winvnc/conandeps_legacy.cmake
+conan/cmake/winvnc/conanrun.bat
+conan/cmake/winvnc/conanrunenv-release-x86_64.bat
+conan/cmake/winvnc/deactivate_conanbuild.bat
+conan/cmake/winvnc/deactivate_conanrun.bat
+conan/cmake/winvnc/libjpeg-turbo-Target-release.cmake
+conan/cmake/winvnc/libjpeg-turbo-config-version.cmake
+conan/cmake/winvnc/libjpeg-turbo-config.cmake
+conan/cmake/winvnc/libjpeg-turbo-release-x86_64-data.cmake
+conan/cmake/winvnc/libjpeg-turboTargets.cmake
+conan/cmake/winvnc/libsodium-Target-release.cmake
+conan/cmake/winvnc/libsodium-config-version.cmake
+conan/cmake/winvnc/libsodium-config.cmake
+conan/cmake/winvnc/libsodium-release-x86_64-data.cmake
+conan/cmake/winvnc/libsodiumTargets.cmake
+conan/cmake/winvnc/module-JPEG-Target-release.cmake
+conan/cmake/winvnc/module-JPEG-release-x86_64-data.cmake
+conan/cmake/winvnc/module-JPEGTargets.cmake
+conan/cmake/winvnc/module-LibLZMA-Target-release.cmake
+conan/cmake/winvnc/module-LibLZMA-release-x86_64-data.cmake
+conan/cmake/winvnc/module-LibLZMATargets.cmake
+conan/cmake/winvnc/module-ZLIB-Target-release.cmake
+conan/cmake/winvnc/module-ZLIB-release-x86_64-data.cmake
+conan/cmake/winvnc/module-ZLIBTargets.cmake
+conan/cmake/winvnc/zstd-Target-release.cmake
+conan/cmake/winvnc/zstd-config-version.cmake
+conan/cmake/winvnc/zstd-config.cmake
+conan/cmake/winvnc/zstd-release-x86_64-data.cmake
+conan/cmake/winvnc/zstdTargets.cmake
+
+conan/cmake/workgrpdomnt4/CMakePresets.json
+conan/cmake/workgrpdomnt4/cmakedeps_macros.cmake
+conan/cmake/workgrpdomnt4/conan_toolchain.cmake
+conan/cmake/workgrpdomnt4/conanbuild.bat
+conan/cmake/workgrpdomnt4/conanbuildenv-release-x86_64.bat
+conan/cmake/workgrpdomnt4/conandeps_legacy.cmake
+conan/cmake/workgrpdomnt4/conanrun.bat
+conan/cmake/workgrpdomnt4/conanrunenv-release-x86_64.bat
+conan/cmake/workgrpdomnt4/deactivate_conanbuild.bat
+conan/cmake/workgrpdomnt4/deactivate_conanrun.bat
+
+
+
+
+
 # Others files
 conan/cmake/ALL_BUILD.vcxproj
 conan/cmake/ALL_BUILD.vcxproj.filters
